--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
+    "@mui/material": "^5.14.7",
     "@stripe/stripe-js": "^2.1.0",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
