--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
+    "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.7",
     "@stripe/stripe-js": "^2.1.0",
     "autoprefixer": "10.4.15",
@@ -26,6 +27,7 @@
     "next": "13.4.19",
     "npm": "^9.8.1",
     "postcss": "8.4.28",
+    "prompt-sync": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.8",
