--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://sarahberripro:jjOq8EsIQUdv7Lb8@cluster0.8fxkzi5.mongodb.net/ecommerce?retryWrites=true&w=majority
+MONGODB_URI=YOUR_URI_HERE
 
