travail sur le slide

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.3.0",
+    "framer-motion": "^10.16.4",
     "joi": "^17.10.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
