--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prompt-sync": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "stripe": "^13.3.0",
