--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "npm": "^9.8.1",
     "postcss": "8.4.28",
     "prompt-sync": "^4.2.0",
