test dropdown under navbar

--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.5",
     "next": "^13.5.4",
+    "next-scroll": "^1.1.0",
     "npm": "^9.8.1",
     "postcss": "8.4.28",
     "prompt-sync": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
